--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -16,10 +16,11 @@
 -->
 
 <resources>
+    <color name="theme_primary">#3f51b5</color>
+    <color name="theme_primary_dark">#002984</color>
+    <color name="theme_accent">#757de8</color>
+    <color name="text_color_light">#ffffff</color>
+    <color name="text_color_byline">#8fff</color>
+    <color name="text_color_content">#424242</color>
     <color name="photo_placeholder">#ccc</color>
-
-    <color name="theme_primary">#04561A</color>
-    <color name="theme_primary_dark">#04561A</color>
-    <color name="theme_accent">#04561A</color>
-    <color name="ltgray">#ffe0e0e0</color>
 </resources>
