--- a/XYZReader/src/main/res/values/dimens.xml
+++ b/XYZReader/src/main/res/values/dimens.xml
@@ -4,8 +4,12 @@
     <dimen name="detail_body_text_size">22sp</dimen>
     <item name="detail_body_line_spacing_multiplier" format="float" type="fraction">1.25</item>
 
-    <dimen name="fab_elevation">2dp</dimen>
+    <dimen name="margin_default_small">4dp</dimen>
+    <dimen name="margin_default_medium">8dp</dimen>
+
+    <dimen name="article_detail_height">250dp</dimen>
+    <dimen name="fab_elevation">6dp</dimen>
     <dimen name="fab_press_translation_z">6dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="fab_margin">24dp</dimen>
 
 </resources>
